@startuml L4_Class Diagram - Variable
'https://plantuml.com/class-diagram

' Class definitions
class ModelManagerVariable {
ModelVariable Variable
List<ModelBackend> AssociatedBackends
}

class ModelVariable<T> {
String Name
String Description
Type Type
VariableIntent Intent
T DefaultValue
List<int> Dimensions
}

' Notes
note right of ModelVariable::Type
  This is inferred from T
end note

note right of ModelVariable::DefaultValue
  This needs to be defined with generics
  to ensure it works with all types.
end note

note left of ModelVariable::Dimensions
  Each element of the list specifies a dimension,
  which get appended to the list when the variable
  is registered.
  
  E.g., a list of [2, 3, 4] implies this variable is a
  2x3x4 matrix.
end note

' Enum definitions
enum VariableIntent {
Undefined
Input
Output
Override
}

' Relationships
ModelManagerVariable *-- ModelVariable
ModelVariable *-- VariableIntent

@enduml